[package]
name = "sshx"
version = "0.1.0"
edition = "2024"

[dependencies] 
clap = { version = "4.6.1", features = ["derive"] }
ssh-key = { version = "0.6", features = ["ed25519"] }
rand_core = { version = "0.6", features = ["getrandom"] }
dirs = "6.0.0"
argon2 = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
rpassword = "7"